--- a/api-design/index.mdx
+++ b/api-design/index.mdx
@@ -3,6 +3,6 @@ title: API design guide
 description: "Learn how to design an API that is easy to use, easy to understand, and easy to maintain."
 ---
 
-import { APIDesignCards } from "~/features/api-design/recipes";
+import { apiDesignCards } from "@/lib/data/api-design";
 
-<APIDesignCards />
+<CardGrid cards={apiDesignCards} />
