--- a/docs/code-samples/automated-code-sample-urls.mdx
+++ b/docs/code-samples/automated-code-sample-urls.mdx
@@ -4,9 +4,9 @@ sidebar_label: "Automated Code Sample URLs"
 slug: "/automated-code-sample-urls/"
 ---
 
-import combinedSpecImage from '@/content/docs/assets/code-samples/combined-spec.png'
-import combinedSpecDetailsImage from '@/content/docs/assets/code-samples/combined-spec-details.png'
-import automaticCodeSamplesImage from '@/content/docs/assets/code-samples/automatic-code-samples-url-unavailable.png'
+import combinedSpecImage from '../assets/code-samples/combined-spec.png'
+import combinedSpecDetailsImage from '../assets/code-samples/combined-spec-details.png'
+import automaticCodeSamplesImage from '../assets/code-samples/automatic-code-samples-url-unavailable.png'
 
 # Automated code sample URLs
 
