--- a/docs/create-client-sdks.mdx
+++ b/docs/create-client-sdks.mdx
@@ -3,15 +3,14 @@ title: Generate SDKs from OpenAPI
 description: "Learn how to create production-ready SDKs from your OpenAPI / Swagger spec using Speakeasy."
 ---
 
-import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
-import { IconGrid } from "~/features/shared/recipes";
-import { SignUpButton } from "~/features/shared/recipes";
-import quickstart1Image from '@/content/docs/assets/create-sdks/quickstart-1.png'
-import quickstart2Image from '@/content/docs/assets/create-sdks/quickstart-2.png'
-import quickstart3Image from '@/content/docs/assets/create-sdks/quickstart-3.png'
-import quickstart4Image from '@/content/docs/assets/create-sdks/quickstart-4.png'
-import quickstart5Image from '@/content/docs/assets/create-sdks/quickstart-5.png'
-import studio1Image from '@/content/docs/assets/create-sdks/studio-1.png'
+
+import quickstart1Image from './assets/create-sdks/quickstart-1.png'
+import quickstart2Image from './assets/create-sdks/quickstart-2.png'
+import quickstart3Image from './assets/create-sdks/quickstart-3.png'
+import quickstart4Image from './assets/create-sdks/quickstart-4.png'
+import quickstart5Image from './assets/create-sdks/quickstart-5.png'
+import studio1Image from './assets/create-sdks/studio-1.png'
+import { supportedLanguages } from "@/lib/data/docs/languages";
 
 # Generate SDKs from OpenAPI
 
@@ -20,7 +19,7 @@ Generating your first SDK with Speakeasy takes no more than a few minutes. Follo
 ## Sign up for Speakeasy
 First sign up for a free Speakeasy account at [https://app.speakeasy.com](https://app.speakeasy.com).
 
-<SignUpButton className="w-fit my-8"/>
+{/* <SignUpButton className="w-fit my-8"/> */}
 
 New accounts start with a 14 day free trial of Speakeasy's business tier, to enable users to try out every SDK generation feature. At the end of the trial, accounts will revert to the free tier. No credit card is required.
 
@@ -134,7 +133,8 @@ There will then be a language selection prompt:
 
 For each language,Speakeasy has crafted generators with language experts to be highly idiomatic. Follow the links below for all the details on the design decisions that have gone into each language we support:
 
-<IconGrid { ...SupportedLanguagesData } />
+
+<CardGrid cards={supportedLanguages}  />
 
 ## Complete the SDK configuration
 
