--- a/docs/customize-testing/github-actions.mdx
+++ b/docs/customize-testing/github-actions.mdx
@@ -3,12 +3,12 @@ title: "Testing in GitHub Actions"
 description: "Learn how to customize testing for your API and SDKs in GitHub Actions."
 ---
 
-import testingRunImage from '@/content/docs/assets/configure-github/testing-run.png'
-import testingCommentImage from '@/content/docs/assets/configure-github/testing-comment.png'
-import prPatPart1Image from '@/content/docs/assets/configure-github/pr-pat-part1.png'
-import prPatPart2Image from '@/content/docs/assets/configure-github/pr-pat-part2.png'
-import prPatPart3Image from '@/content/docs/assets/configure-github/pr-pat-part3.png'
-import prCreationTokenImage from '@/content/docs/assets/configure-github/pr-creation-token.png'
+import testingRunImage from '../assets/configure-github/testing-run.png'
+import testingCommentImage from '../assets/configure-github/testing-comment.png'
+import prPatPart1Image from '../assets/configure-github/pr-pat-part1.png'
+import prPatPart2Image from '../assets/configure-github/pr-pat-part2.png'
+import prPatPart3Image from '../assets/configure-github/pr-pat-part3.png'
+import prCreationTokenImage from '../assets/configure-github/pr-creation-token.png'
 
 # Testing in GitHub Actions
 
