--- a/docs/customize-testing/running-tests.mdx
+++ b/docs/customize-testing/running-tests.mdx
@@ -3,8 +3,8 @@ title: "Running SDK Tests"
 description: "Learn how to run tests for your SDK."
 ---
 
-import cliRunTestsImage from '@/content/docs/assets/cli-run-tests.png'
-import testReportImage from '@/content/docs/assets/test-report.png'
+import cliRunTestsImage from '../assets/cli-run-tests.png'
+import testReportImage from '../assets/test-report.png'
 
 # Running SDK Tests
 
