--- a/docs/customize/webhooks.mdx
+++ b/docs/customize/webhooks.mdx
@@ -4,7 +4,7 @@ description: "Learn how to generate webhook types in your Speakeasy client SDKs 
 slug: "/customize-sdks/webhooks/"
 ---
 
-import webhooksBillingImage from '@/content/docs/assets/webhooks-billing.png'
+import webhooksBillingImage from '../assets/webhooks-billing.png'
 
 # Add webhooks to your SDKs
 
