--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -8,9 +8,9 @@ import { Banner, GenerateSDK, GenerateTerraformProviders, TestApis, GovernApis, 
 import { IconGrid } from "~/features/shared/recipes";
 import { ProductCards } from "~/features/docs/home/recipes";
 import { DocsOffering } from "~/features/docs/home/recipes";
-import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
 import { SignUpButton } from "~/features/shared/recipes";
 import { OpenAPIIcon, CalendarIcon, OpenBookIcon, LogsIcon } from "~/components/jsx-icons";
+import { supportedLanguages } from "@/lib/data/docs/languages";
 
 <Banner />
 
@@ -22,7 +22,7 @@ import { OpenAPIIcon, CalendarIcon, OpenBookIcon, LogsIcon } from "~/components/
 ---
 
 ## Idiomatic SDKs
-<IconGrid {...SupportedLanguagesData} />
+<CardGrid cards={supportedLanguages}  />
 
 ## SDK-enhanced documentation
 
