--- a/docs/integrations/_get-public-url-snippet.mdx
+++ b/docs/integrations/_get-public-url-snippet.mdx
@@ -1,7 +1,7 @@
 {/* This snippet is made to be reused in docs that require instruction on grabbing the Public URL. */}
 
-import openapiRegistryAndCombinedSpecImage from '@/content/docs/assets/code-samples/openapi-registry-and-combined-spec.png'
-import copyCombinedSpecUrlImage from '@/content/docs/assets/code-samples/copy-combined-spec-url.png'
+import openapiRegistryAndCombinedSpecImage from '../assets/code-samples/openapi-registry-and-combined-spec.png'
+import copyCombinedSpecUrlImage from '../assets/code-samples/copy-combined-spec-url.png'
 
 ### Get the API's combined spec public URL from the registry
 
