--- a/docs/integrations/bump.mdx
+++ b/docs/integrations/bump.mdx
@@ -5,9 +5,9 @@ title: Integrate Speakeasy with Bump.sh
 description: "Learn how to integrate Speakeasy code generation into Bump.sh docs."
 ---
 
-import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
-import bumpWithSpeakeasyOpenapiImage from '@/content/docs/assets/code-samples/bump-with-speakeasy-openapi.png'
-import bumpAutomaticDeploymentSettingsImage from '@/content/docs/assets/code-samples/bump-automatic-deployment-settings.png'
+import GetPublicUrlSnippet from "../integrations/_get-public-url-snippet.mdx";
+import bumpWithSpeakeasyOpenapiImage from '../assets/code-samples/bump-with-speakeasy-openapi.png'
+import bumpAutomaticDeploymentSettingsImage from '../assets/code-samples/bump-automatic-deployment-settings.png'
 
 # Integrate Speakeasy with Bump.sh
 
