--- a/docs/integrations/mintlify.mdx
+++ b/docs/integrations/mintlify.mdx
@@ -5,8 +5,8 @@ title: Integrate Speakeasy with Mintlify
 description: "Learn how to integrate Speakeasy code generation into Mintlify docs."
 ---
 
-import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
-import mintlifyWithSpeakeasyOpenapiImage from '@/content/docs/assets/code-samples/mintlify-with-speakeasy-openapi.png'
+import GetPublicUrlSnippet from "../integrations/_get-public-url-snippet.mdx";
+import mintlifyWithSpeakeasyOpenapiImage from '../assets/code-samples/mintlify-with-speakeasy-openapi.png'
 
 # Integrate Speakeasy with Mintlify
 
