--- a/docs/integrations/readme.mdx
+++ b/docs/integrations/readme.mdx
@@ -5,11 +5,11 @@ title: Integrate Speakeasy with ReadMe
 description: "Learn how to integrate Speakeasy code generation into ReadMe docs."
 ---
 
-import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
-import readmeOasApiReferenceImage from '@/content/docs/assets/code-samples/readme-oas-api-reference.webp'
-import readmeDashboardImage from '@/content/docs/assets/code-samples/readme-dashboard.webp'
-import readmeProjectToUploadOasImage from '@/content/docs/assets/code-samples/readme-project-to-upload-oas.webp'
-import readmeImportingFromUrlImage from '@/content/docs/assets/code-samples/readme-importing-from-url.png'
+import GetPublicUrlSnippet from "../integrations/_get-public-url-snippet.mdx";
+import readmeOasApiReferenceImage from '../assets/code-samples/readme-oas-api-reference.webp'
+import readmeDashboardImage from '../assets/code-samples/readme-dashboard.webp'
+import readmeProjectToUploadOasImage from '../assets/code-samples/readme-project-to-upload-oas.webp'
+import readmeImportingFromUrlImage from '../assets/code-samples/readme-importing-from-url.png'
 
 # Integrate Speakeasy with ReadMe
 
