--- a/docs/languages/philosophy.mdx
+++ b/docs/languages/philosophy.mdx
@@ -4,9 +4,7 @@ title: Our design philosophy
 description: "Learn about Speakeasy's SDK design methodology, which prioritizes minimal dependencies, type safety, and easy debugging."
 ---
 
-import { IconGrid } from "~/features/shared/recipes";
-import { SupportedLanguagesData } from "~/data/shared/supportedLanguages";
-import { OSSComparisonData } from "~/data/shared/ossComparisons";
+import { supportedLanguages } from "@/lib/data/docs/languages";
 
 # Our design philosophy
 
@@ -21,5 +19,6 @@ SDKs are a critical interface for an API, which is why we put a lot of thought i
 
 Please see the table below for language-specific details.
 
-<IconGrid {...SupportedLanguagesData} />
-<IconGrid {...OSSComparisonData} />
+<CardGrid cards={supportedLanguages}  />
+{/* // TODO: refactor to make sense (cant preview right now so going in blind) */}
+{/* <IconGrid {...OSSComparisonData} /> */}
