--- a/docs/manage/github-setup.mdx
+++ b/docs/manage/github-setup.mdx
@@ -4,10 +4,10 @@ description: "Learn how to set up your GitHub repo to automatically generate and
 position: 1
 ---
 
-import configureGithubImage from '@/content/docs/assets/configure-github/configure.png'
-import successfulWorkflowImage from '@/content/docs/assets/configure-github/successful-workflow.png'
-import workflowPermissionsImage from '@/content/docs/assets/configure-github/workflow-permissions.png'
-import remoteUrlSchemaImage from '@/content/docs/assets/configure-github/remote-url-schema.png'
+import configureGithubImage from '../assets/configure-github/configure.png'
+import successfulWorkflowImage from '../assets/configure-github/successful-workflow.png'
+import workflowPermissionsImage from '../assets/configure-github/workflow-permissions.png'
+import remoteUrlSchemaImage from '../assets/configure-github/remote-url-schema.png'
 
 # Set up your SDK on GitHub
 
