--- a/docs/manage/versioning.mdx
+++ b/docs/manage/versioning.mdx
@@ -3,9 +3,9 @@ title: "SDK versioning"
 description: "Learn how to manage SDK versioning in Speakeasy."
 ---
 
-import labelsLocationImage from '@/content/docs/assets/labels-location.png'
-import versioning1Image from '@/content/docs/assets/versioning-1.png'
-import versioning2Image from '@/content/docs/assets/versioning-2.png'
+import labelsLocationImage from '../assets/labels-location.png'
+import versioning1Image from '../assets/versioning-1.png'
+import versioning2Image from '../assets/versioning-2.png'
 
 # SDK versioning
 
