--- a/docs/prep-openapi/overlays/apply-overlays.mdx
+++ b/docs/prep-openapi/overlays/apply-overlays.mdx
@@ -4,10 +4,10 @@ sidebar_label: Apply Overlays
 description: "Overlays are patch files that implement changes to an OpenAPI document without modifying the upstream source. This guide explains how overlays work and how to apply them."
 ---
 
-import overlays1Image from '@/content/docs/assets/overlays-1.png'
-import overlays2Image from '@/content/docs/assets/overlays-2.png'
-import overlays3Image from '@/content/docs/assets/overlays-3.png'
-import overlays4Image from '@/content/docs/assets/overlays-4.png'
+import overlays1Image from '../../assets/overlays-1.png'
+import overlays2Image from '../../assets/overlays-2.png'
+import overlays3Image from '../../assets/overlays-3.png'
+import overlays4Image from '../../assets/overlays-4.png'
 
 # Apply an overlay
 
