--- a/docs/publish-sdk.mdx
+++ b/docs/publish-sdk.mdx
@@ -4,13 +4,13 @@ description: "Learn how to publish your Speakeasy-generated SDK to popular packa
 position: 2
 ---
 
-import configurePublishingImage from '@/content/docs/assets/publish-sdks/configure-publishing.png'
-import configureTokenImage from '@/content/docs/assets/publish-sdks/configure-token.png'
-import publishingSuccessImage from '@/content/docs/assets/publish-sdks/publishing-success.png'
-import publishingDispatchImage from '@/content/docs/assets/publish-sdks/publishing-dispatch.png'
-import publishingOverviewImage from '@/content/docs/assets/publish-sdks/publishing-overview.png'
-import setPublishingSecretsImage from '@/content/docs/assets/publish-sdks/set-publishing-secrets.png'
-import pendingReleaseImage from '@/content/docs/assets/publish-sdks/pending-release.png'
+import configurePublishingImage from './assets/publish-sdks/configure-publishing.png'
+import configureTokenImage from './assets/publish-sdks/configure-token.png'
+import publishingSuccessImage from './assets/publish-sdks/publishing-success.png'
+import publishingDispatchImage from './assets/publish-sdks/publishing-dispatch.png'
+import publishingOverviewImage from './assets/publish-sdks/publishing-overview.png'
+import setPublishingSecretsImage from './assets/publish-sdks/set-publishing-secrets.png'
+import pendingReleaseImage from './assets/publish-sdks/pending-release.png'
 
 # Publish SDKs
 
