--- a/docs/testing.mdx
+++ b/docs/testing.mdx
@@ -4,7 +4,7 @@ description: "Learn how to generate and run automated testing for your API and S
 ---
 
 import { LanguageTestingGrid } from "~/features/shared/recipes";
-import sdkTestingBillingImage from '@/content/docs/assets/sdk-testing-billing.png'
+import sdkTestingBillingImage from './assets/sdk-testing-billing.png'
 
 # Testing with Speakeasy
 
