--- a/docs/integrations/scalar.mdx
+++ b/docs/integrations/scalar.mdx
@@ -5,10 +5,10 @@ title: Integrate Speakeasy with Scalar
 description: "Learn how to integrate Speakeasy code generation into Scalar docs."
 ---
 
-import GetPublicUrlSnippet from "@/content/docs/integrations/_get-public-url-snippet.mdx";
-import scalarDocsUrlImportedImage from '@/content/docs/assets/code-samples/scalar-docs-url-imported.png'
-import scalarReferenceToImportUrlImage from '@/content/docs/assets/code-samples/scalar-reference-to-import-url.png'
-import scalarLinkOpenapiSpecificationModalImage from '@/content/docs/assets/code-samples/scalar-link-openapi-specification-modal.png'
+import GetPublicUrlSnippet from "../integrations/_get-public-url-snippet.mdx";
+import scalarDocsUrlImportedImage from '../assets/code-samples/scalar-docs-url-imported.png'
+import scalarReferenceToImportUrlImage from '../assets/code-samples/scalar-reference-to-import-url.png'
+import scalarLinkOpenapiSpecificationModalImage from '../assets/code-samples/scalar-link-openapi-specification-modal.png'
 
 # Integrate Speakeasy with Scalar
 
