--- a/guides/sdks/generate-in-a-subdirectory.mdx
+++ b/guides/sdks/generate-in-a-subdirectory.mdx
@@ -3,11 +3,11 @@ title: "Generate SDK in a subdirectory"
 description: "Setup your SDK in a subdirectory."
 ---
 
-import subdirectoryImage1 from '@/content/guides/sdks/assets/subdirectory/1.png'
-import subdirectoryImage2 from '@/content/guides/sdks/assets/subdirectory/2.png'
-import subdirectoryImage3 from '@/content/guides/sdks/assets/subdirectory/3.png'
-import subdirectoryImage4 from '@/content/guides/sdks/assets/subdirectory/4.png'
-import subdirectoryImage5 from '@/content/guides/sdks/assets/subdirectory/5.png'
+import subdirectoryImage1 from '../assets/subdirectory/1.png'
+import subdirectoryImage2 from '../assets/subdirectory/2.png'
+import subdirectoryImage3 from '../assets/subdirectory/3.png'
+import subdirectoryImage4 from '../assets/subdirectory/4.png'
+import subdirectoryImage5 from '../assets/subdirectory/5.png'
 
 # Generate SDK in a Subdirectory
 
